[project]
name = "aicalart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.120",
    "colorama==0.4.6",
    "python-dotenv==1.0.1",
    "gnews==0.3.7",
    "google-api-python-client==2.132.0",
    "google-auth-oauthlib==1.2.0",
    "openai==1.31.2",
    "pillow==10.3.0",
    "requests==2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
